# bitcoin

./: .gitignore  .mailmap  ANNOUNCEMENT.md  BUILD_WASM_AND_FRONTEND.md  CDP_API_IMPLEMENTATION.md  CDP_API_QUICKSTART.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  DOCUMENTATION_INDEX.md  ENS_CONFIGURATION.md  GIT_WORKFLOW_GUIDE.md  IDENTITY_MANAGEMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_KUSHMANMB_ETH.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASK_COMPLETION.md  ONCHAIN_SETUP_DOCUMENTATION.md  ORG_WIDE_UPDATE_PROCESS.md  OWNERS  QUICKSTART_KUSHMANMB_ETH.md  QUICK_START_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_PRACTICES.md  SELF_HOSTED_RUNNER_SETUP.md  SSH_KEY_SETUP.md  WASM_FRONTEND_IMPLEMENTATION.md  WORKFLOW_CHANGES_SUMMARY.md  WORKFLOW_UPDATES.md  pom.xml  start.sh
.github/: CODEOWNERS  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  QUICK_START_RULESETS.md  README.md  RUNNER_SETUP.md  SECURITY_MANAGEMENT.md  SECURITY_QUICK_REFERENCE.md  SELF_HOSTED_RUNNER_SECURITY.md  VALIDATION_TOOL.md  WORKFLOW_SECURITY.md  apply-rulesets.sh  validate-rulesets.py  validate-workflows.py
app/: .eslintrc.cjs  README.md  index.html  package.json  vite.config.js
bitcoin-onchain-app/: .env.example  CDP_EMBEDDED_WALLET.md  README.md  TASK_FEATURE.md  package.json
contrib/: fetch_website.py
doc/: README.md  bit_commitment.md  fuzzing.md  release-notes.md  self-hosted-runner-setup.md  website-deployment.md
pdf-utils/wasm/: .gitattributes  Cargo.toml  README.md  generate_wasm.sh
pdf-utils/wasm/src/: lib.rs
scripts/: README.md  propagate-updates.sh
solana/: Anchor.toml  README.md  package.json
solana/programs/zkproof/: Cargo.toml
solana/programs/zkproof/src/: lib.rs
src/: key.cpp  netaddress.cpp  pow.h  pubkey.cpp  (+3 more)
zkpdf_lib/: Cargo.toml  README.md
zkpdf_lib/examples/: basic_usage.rs
zkpdf_lib/src/: lib.rs
zkpdf_lib/tests/: integration_tests.rs
(+125 files in other folders)
