[package]
name = "zkpdf_lib"
version = "0.1.0"
authors = ["Bitcoin Core Contributors"]
edition = "2021"
description = "Zero-knowledge proof library for PDF verification"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Security: Use only well-maintained, audited dependencies
# All dependencies should be verified before adding

[dev-dependencies]

[profile.release]
# Optimize for size and security
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Development profile with debugging support
opt-level = 0
