[package]
name = "bitcoin-pdf-utils"
version = "0.1.0"
authors = ["Bitcoin Core Contributors"]
edition = "2021"
description = "WebAssembly utilities for Bitcoin PDF generation and processing"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security: Use only well-maintained, audited dependencies
# All dependencies should be verified before adding

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size and security
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Development profile with debugging support
opt-level = 0
