[package]
name = "zkproof"
version = "0.1.0"
description = "Zero-knowledge proof verification program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkproof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "~1.17"
